--- a/BethanysPieShop/Views/Admin/UserManagement.cshtml
+++ b/BethanysPieShop/Views/Admin/UserManagement.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<IdentityUser>
 
-<h2>User management</h2>
-
 @if (!Model.Any())
 {
     <tr><td colspan="3" class="text-center">No User Accounts</td></tr>
 }
 else
 {
-    <table class="table table-condensed table-bordered" header header-content="User Management">
+    <table class="table table-bordered table-striped" header header-content="User Management">
         <tr>
             <th>User ID</th>
             <th>User name</th>
@@ -22,6 +20,14 @@ else
                 <td>@user.Id</td>
                 <td>@user.UserName</td>
                 <td>@user.Email</td>
+                <td>
+                    <form asp-action="DeleteUser" asp-route-id="@user.Id" method="post">
+                        <a class="btn btn-sm btn-primary" asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
+                        <button type="submit" onclick="return confirm('Do you really want to delete this user?')" class="btn btn-sm btn-danger">
+                            Delete
+                        </button>
+                    </form>
+                </td>
             </tr>
         }
     </table>
