--- a/BethanysPieShop/Views/_ViewImports.cshtml
+++ b/BethanysPieShop/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using BethanysPieShop.Models
 @using BethanysPieShop.ViewModels
 @using Microsoft.AspNetCore.Identity;
+@using BethanysPieShop.Models.Enumerations
 @addTagHelper BethanysPieShop.TagHelpers.*, BethanysPieShop
+@addTagHelper *, BethanysPieShop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
